# llama

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test.ipynb  test.py
.github/workflows/: docker-build.yaml
alpaca/: __init__.py  __main__.py  consts.py  subscriber.py
backtests/: backtests.json  backtests.json.vwap
data/: <class 'type'>.json  MovingAverageStrat.json  MovingAverage_data.json  MovingAverage_moving_averages.json  Strategy_overall_results.json  Vwap_data.json  bars.json  overall.json  qoutes.json  trades.json
docker/: Dockerfile  Dockerfile.python311
helm/llama/: Chart.yaml  values.yaml
helm/llama/templates/: api.yaml  datastream.yaml  dbsetup.yaml  ext-secret.yaml  ingress.yaml  secret.yaml  tradestream.yaml
llama/: __init__.py  __main__.py  consts.py  entrypoints.py  settings.py  test-strat.py  tools.py
llama/api/: app.py  deps.py  endpoints.py  validator.py
llama/api/endpoints/: backtest.py  stocks.py  strats.py  trading.py
llama/backtester/: __init__.py  backtest.py  consts.py  mocktrader.py
llama/database/: __init__.py  alembic.ini  config.py  models.py  statements.py
llama/database/alembic/: env.py
llama/database/alembic/versions/: 06e7e81918f0_add_extra_account_fields.py  079d665567ed_add_assets_table.py  1a01da067840_setup.py  2a419aff447e_tables.py  524dc01f1c95_change_columns.py  56111388690d_add_account_data.py  57c7d19ada78_tables.py  592806c0561d_add_backtest_stats.py  643ff49b031c_conditions.py  67ae6b508be1_tables.py  755b23700d1c_tradeupdates_and_orders_tables.py  7a87f23076b7_add_positions.py  9c1bdc843852_add_timestamp.py  a506959cf187_initial.py  baa9159e387b_add_backtest_table.py  f1f0486d9591_add_technical_indicators_to_bars.py  fbe531239951_add_strat.py
llama/indicators/: old-technical.py  sentiment.py  technical.py  test-strat.py  utilities.py
llama/stocks/: __init__.py  backtest.py  extendend_bars.py  garch_strategy.py  graph.py  history.py  models.py  sentiment.py  strats.py  technical.py  temporary-copy.py  tools.py  trader.py
llama/stocks/strats/: __init__.py  strats.py
llama/stocks/strats/base/: __init__.py  conditions.py  strat.py
llama/stocks/strats/vwap/: __init__.py  conditions.py  strat.py
llama/strats/: __init__.py  conditions.py  consts.py  setup.py  strats.py
llama/strats/base/: __init__.py  conditions.py  consts.py  strat.py
llama/strats/sample/: __init__.py  conditions.py  start.py  strats.py
llama/strats/vwap/: __init__.py  conditions.py  strats.py
llama/worker/: __init__.py  backtest.py  run.py  websocket.py
scripts/: browser.sh  build.sh  start.sh
