[tool.poetry]
name = "llama"
version = "0.1.0"
description = ""
authors = ["Ciaran <ciaranmckey@gmail.com>"]


[tool.poetry.dependencies]
python = "~3.11"
pydantic = "^2"
alpaca-py = "^0.19"
matplotlib = "^3.7.2"
numpy = "^1.25.1"
fastapi = "^0.110.0"
uvicorn = "^0.23.1"
statsmodels = "^0.14.1"
pandas-datareader = "^0.10.0"
pandas-ta = "^0.3.14b0"

[tool.poetry.group.local.dependencies]
trekkers = { version = "^0.2", source = "kube" }
yumi = { version = "^0.2", source = "kube" }
pandas-datareader = "^0.10.0"
pyportfolioopt = "^1.5.5"
yfinance = "^0.2.37"
pandas-ta = "^0.3.14b0"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
requests = "^2.31.0"
alpaca = "^1.0.0"
tweepy = "^4.14.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
pylint = "^2.17.4"
ruff = "^0.0.278"
black = "^23.7.0"
pytest = "^7.4.0"
types-requests = "^2.31.0.1"
ipykernel = "^6.25.2"
python-dotenv = "^1.0.1"


[[tool.poetry.source]]
name = "kube"
url = "http://pypi.apps.svc.cluster.local:8080/simple"
priority = "explicit"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.pylint.main]
extension-pkg-whitelist = "pydantic"

[[tool.mypy.overrides]]
module = ["alpaca.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.ruff]
# https://beta.ruff.rs/docs/rules/
select = ["E", "PLE", "F", "W605", "S", "RUF"]
ignore = ["S104"]
exclude = ["tests"]
show-fixes = true

[tool.pylint]
ignored-modules = ["alembic.context","sqlalchemy.orm.session"]